--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -1,15 +1,12 @@
 ---
 driver:
   name: ec2
-  aws_access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
-  aws_secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
   aws_ssh_key_id: <%= ENV['AWS_KEYPAIR_NAME'] %>
   ssh_key: <%= ENV['EC2_SSH_KEY_PATH'] %>
   region: us-east-1
   availability_zone: us-east-1b
   security_group_ids: ['ci-testing']
-  username: ubuntu
-  flavor_id: c3.large
+  instance_type: c3.large
   interface: public
 
 provisioner:
