Add integration testing on Ubuntu 14.04

--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -21,6 +21,11 @@ platforms:
     image_id: ami-190e4b73
     tags:
       Name: s3_dir-default-ubuntu-1204
+- name: ubuntu-14.04
+  driver_config:
+    image_id: ami-9883c6f2
+    tags:
+      Name: s3_dir-default-ubuntu-1404
 
 suites:
 - name: default
