Disable ABC RuboCop metric
Not really helpful, in this case

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -19,3 +19,6 @@ CyclomaticComplexity:
 # Advantageous for readability to line up attributes
 SingleSpaceBeforeFirstArg:
   Enabled: false
+
+AbcSize:
+  Enabled: false
