--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -17,5 +17,5 @@ suites:
       - recipe[s3_dir_test::default]
     attributes:
       s3_dir:
-        aws_access_key_id: <%= ENV['AWS_ACCESS_KEY'] %>
-        aws_secret_access_key: <%= ENV['AWS_SECRET_KEY'] %>
+        aws_access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+        aws_secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
